--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "claudia": "^5.12.0"
+    "claudia": "^5.12.0",
+    "eslint": "^8.22.0"
   },
   "dependencies": {
     "claudia-api-builder": "^4.1.2",
-    "eslint": "^7.5.0",
     "mailgun-js": "^0.22.0",
     "md5": "^2.2.1"
   },
